# gnc-toolbox

./: .clang-format  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  PACKAGING.md  README.md  SECURITY.md  TESTING.md  USAGE.md  main.c  run_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: cmake_uninstall.cmake.in
examples/: README.md  bank-us.csv  import-us.rules.csv  merge.rules.csv
inc/: cli.h  csv_helper.h  data.h  gnc_utilities.h  match_params.h  match_params_loader.h  matcher.h  merge.h  output.h  utilities.h
man/: gnc-toolbox.1
scripts/: test-ci-ubuntu22.sh
src/: cli.c  csv_helper.c  gnc_utilities.c  match_params_loader.c  matcher.c  merge.c  output.c  utilities.c
tests/: test_book_integration.c  test_book_integration.h  test_cli.c  test_cli.h  test_csv_helper.c  test_csv_helper.h  test_csv_params.c  test_csv_params.h  test_date_parsing.c  test_date_parsing.h  test_gnc_utilities.c  test_gnc_utilities.h  test_input_validation.c  test_input_validation.h  test_integration.c  test_integration.h  test_main.c  test_number_parsing.c  test_number_parsing.h  test_utilities.c  test_utilities.h
tests/data/: empty_amounts_config.ini  empty_amounts_test.csv  malformed_data.csv  mixed_sign_config.ini  mixed_sign_test.csv  multiple_amount_config.ini  multiple_amount_test.csv  sample_config_eu.ini  sample_config_us.ini  sample_transactions_eu.csv  sample_transactions_us.csv
